--- a/src/module/TimelineBlock/TimelineBlock.module.scss
+++ b/src/module/TimelineBlock/TimelineBlock.module.scss
@@ -15,6 +15,7 @@
 		padding: 0 calc(5px + 4rem);
 		color: var(--text-color);
 		line-height: 1.2;
+		
 
 		&::before {
 			content: '';
@@ -36,6 +37,7 @@
 			padding: 0 1rem;
 			max-width: 100%;
 			margin-top: 5rem;
+			margin-bottom: 2rem;
 
 			&::before {
 				content: none;
@@ -88,7 +90,6 @@
 		}
 
 		@media (max-width: 768px) {
-
 			border-top: 1px solid rgba(66, 86, 122, 0.2);
 			padding-top: 3rem;
 
@@ -148,7 +149,7 @@
 			justify-content: center;
 			gap: 4rem;
 			min-width: 100%;
-			font-size: clamp(12.5rem, 3vw, 3.5rem);
+			font-size: 12.5rem;
 			font-weight: 700;
 
 			.start {
@@ -214,8 +215,31 @@
 		}
 
 		&__button {
+			position: absolute;
+			bottom: 21rem;
+			left: 2rem;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			z-index: 500;
+
+			span {
+				font-size: 0.875rem;
+				font-weight: 400;
+			}
+
+			ul {
+				display: flex;
+				align-items: center;
+				gap: 0.5rem;
+				margin-top: 1rem;
+			}
+			@media screen and (max-width: 1020px) {
+				bottom: 24rem;
+			}
+
 			@media screen and (max-width: 768px) {
-				display: none;
+				bottom: 5rem;
 			}
 		}
 	}
